Fixing hero for large screens and menu on mobile

--- a/components/navigation/hero.scss
+++ b/components/navigation/hero.scss
@@ -77,7 +77,7 @@ tag: component
     }
   }
 
-  @include mappy-bp(1800x) {
+  @include mappy-bp(1800px) {
     &__content {
       padding-bottom: margin('huge');
     }
